<resources>
    <string name="app_name">Carebase</string>
    <string name="file_local_cache">file_local_cache</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_appointments">Appointments</string>
    <string name="nav_profile">Profile</string>
    <string name="button">Button</string>
    <string name="nav_title_rx">Prescriptions</string>
    <string name="action_more_info">More Info</string>
    <string name="rx_expires_in">Expires</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_terms_of_use">Terms of Use</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="intro_title_slide1">A New Patient Experience</string>
    <string name="intro_content_slide1">Carebase is a new way to interact with your medical practitioner during the difficult treatment of cancer treatment.</string>
    <string name="intro_title_slide2">Manage Prescriptions</string>
    <string name="intro_content_slide2">All your medical prescriptions, issue dates and dosage informations in one place.</string>
    <string name="intro_title_slide3">Better Communication</string>
    <string name="intro_content_slide3">Carebase is you and your loved one\'s direct link to the practitioner\'s office and medical records.</string>
    <string name="intro_title_slide4">Transparent Medical Records</string>
    <string name="intro_content_slide4">With Carebase doctors share patient updates and summaries making the whole experience less stressful and transparent.</string>
    <string name="intro_title_slide5">Welcome to Carebase</string>
    <string name="intro_content_slide5">We hope that Carebase helps you through this stressful time.</string>
    <string name="action_introduction">Introduction</string>
    <string name="login">Login</string>
    <string name="carebase_slogan">Rebuilding your doctor connection.</string>
    <string name="example_email">example@example.com</string>
    <string name="example_pw">Enter password</string>
    <string name="signup">Sign Up</string>
    <string name="example_fname">Jon</string>
    <string name="example_lname">Barrington</string>
    <string name="confirm_password">Confirm password</string>
    <string name="account_information">Account Information:</string>
    <string name="health_card_number">Health Card Number</string>
    <string name="doctor_s_last_name">Doctor\'s Last Name</string>
    <string name="doctor_s_first_name">Doctor\'s First Name</string>
    <string name="patient_information">Patient Information:</string>
    <string name="carebase_logo">Carebase logo</string>
    <string name="carebase">Carebase</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="no_prescriptions">No prescriptions found.</string>
    <string name="upcoming_appt">Upcoming Appointment</string>
    <string name="your_appt_has_been">Your appointment is</string>
    <string name="scheduled">Scheduled</string>
    <string name="hospital">Hospital</string>
    <string name="doctor">Doctor</string>
    <string name="time">Time</string>
    <string name="prep">Preparations</string>
    <string name="questions_comments">Questions/Comments</string>
    <string name="default_comments">Lorem ipsum dolor amet banh mi readymade.</string>
    <string name="fab_label_camera">Upload Photo</string>
    <string name="fab_label_schedule">Schedule</string>
    <string name="fab_label_make_note">Make note</string>
    <string name="no_current_appointments">No Appointments Currently.</string>
    <string name="no_appts_caption">Your upcoming appointments will appear here. You can schedule appointments through the button menu below.</string>
    <string name="save_comment">Save comments</string>
    <string name="cancel">Cancel</string>
    <string name="medical_conditions">Medical Conditions</string>
    <string name="height">Height (cm)</string>
    <string name="blood_type">Blood Type</string>
    <string name="weight">Weight (lbs)</string>
    <string name="health_card">Health Card</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="allergies">Allergies</string>
    <string name="on_your_way">On Your Way</string>
    <string name="treatments_done">Treatments completed:\ </string>
    <string name="treatments_to_go">Appointments left to go:\ </string>
    <string name="random_pc">25%</string>
    <string name="no_summaries">No summaries found.</string>
    <string name="summaries">Appointment Summaries</string>
    <string name="action_logout">Logout</string>

    <string-array name="blood_types">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>A-</item>
        <item>A+</item>
        <item>O-</item>
        <item>O</item>
    </string-array>
</resources>
