<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.hci.carebase.ui.activities.LoginRegisterActivity">


    <LinearLayout

        android:layout_marginTop="@dimen/_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="@dimen/_32"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/_72"
            android:scaleType="fitXY"
            android:layout_height="@dimen/_72"
            android:src="@drawable/ic_launcher_full"
            android:contentDescription="@string/carebase_logo" />

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carebase"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carebase_slogan"/>
        </LinearLayout>

        <!-- Start view switcher -->
        <ViewSwitcher
        android:layout_margin="@dimen/_32"
        android:id="@+id/login_register_viewswitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <!-- Start Login Layout -->
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/vs_login_layout">

                <TextView
                    android:textAlignment="center"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="@dimen/text_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"/>

                <EditText
                    android:id="@+id/vs_login_email_et"
                    android:layout_marginTop="@dimen/_32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:hint="@string/example_email"/>

                <EditText
                    android:id="@+id/vs_login_password_et"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/example_pw"/>

                <Button
                    android:theme="@style/PrimaryFlatButton"
                    android:id="@+id/vs_login_button_exec_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vs_login_button_i_dont_have_an_account"
                    android:theme="@style/PrimaryFlatButton"
                    android:text="@string/i_don_t_have_an_account"/>
            </LinearLayout>

            <!-- Start Sign Up -->
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                android:textAlignment="center"
                style="@style/TextAppearance.AppCompat.Display1"
                android:textSize="@dimen/text_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"/>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8"
                    android:text="@string/patient_information" />

                    <EditText
                    android:id="@+id/vs_signup_patient_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example_fname"
                    android:inputType="textCapWords" />

                    <EditText
                    android:id="@+id/vs_signup_patient_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example_lname"
                    android:inputType="textCapWords" />

                    <EditText
                    android:id="@+id/vs_signup_patient_doctor_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doctor_s_first_name"
                    android:inputType="textCapWords" />


                    <EditText
                    android:id="@+id/vs_signup_patient_doctor_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doctor_s_last_name"
                    android:inputType="textCapWords" />


                    <EditText
                    android:id="@+id/vs_signup_patient_hcard_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/health_card_number"
                    android:inputType="textCapCharacters" />

                </LinearLayout>



                <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <TextView
                    android:layout_marginTop="@dimen/_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_information"/>
                    <EditText
                    android:id="@+id/vs_signup_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/example_email"/>

                    <EditText
                    android:id="@+id/vs_signup_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/example_pw"/>

                    <EditText
                    android:id="@+id/vs_signup_password_confirm_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"/>

                    <Button
                    android:layout_gravity="center"
                    android:theme="@style/PrimaryFlatButton"
                    android:id="@+id/vs_signup_button_exec_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"/>

                    <Button
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vs_signup_button_go_to_login"
                    android:theme="@style/PrimaryFlatButton"
                    android:text="@string/login"/>
                </LinearLayout>
            </LinearLayout>


        </ViewSwitcher>
    </LinearLayout>
</ScrollView>
